== UNRELEASED

  * Implemented both background solid fill and chart area solid fill.
  * Added color aliasing: 3-character colors and a COLORS table.
  * Full support for axis labels.
  * Implemented horizontal/vertical range markers.

  * Freeze GChart::VERSION.

== 0.4.2 (2008-01-09)

  * Encoding a flatlined chart doesn't asplode [Jack Danger Canty]

== 0.4.1 (2008-01-02)

  * (bug #16756 fixed) Example in the README is incorrect

== 0.4.0 (2007-12-28)

  * New committer, Abhay Kumar
  * Implement all three encodings. Fix extended encoding calculation.
  * Support bar thickness/spacing for bar charts
  * (bug #16565 fixed) GChart now tells you when your chart is too big.
  * Pushed some bar chart params logic down where it belongs
  * Enforce pie chart spec: pie charts only take one set of data

== 0.3.0 (2007-12-24)
  
  * Breaking change: labels --> legend
  * Switched to RSpec, added skeletal specs for all types
  * Extensive refactoring, pulled chart types into GChart::Base subclasses
  * (bug) Errors in the static helpers should report a reasonable file and line

== 0.2.0 (2007-12-12)

  * Support for basic :labels
  * Support for pie3d
  * Minor doc cleanups

== 0.1.0 (2007-12-10)

  * Birthday!