@@ -14,9 +14,12 @@ lib/gchart/bar.rb
 lib/gchart/base.rb
 lib/gchart/colors.rb
 lib/gchart/line.rb
+lib/gchart/map.rb
+lib/gchart/meter.rb
 lib/gchart/pie.rb
 lib/gchart/pie_3d.rb
 lib/gchart/scatter.rb
+lib/gchart/sparkline.rb
 lib/gchart/venn.rb
 lib/gchart/xy_line.rb
 lib/version.rb
@@ -29,9 +32,12 @@ spec/gchart/bar_spec.rb
 spec/gchart/base_spec.rb
 spec/gchart/colors_spec.rb
 spec/gchart/line_spec.rb
+spec/gchart/map_spec.rb
+spec/gchart/meter_spec.rb
 spec/gchart/pie_3d_spec.rb
 spec/gchart/pie_spec.rb
 spec/gchart/scatter_spec.rb
+spec/gchart/sparkline_spec.rb
 spec/gchart/venn_spec.rb
 spec/gchart/xy_line_spec.rb
 spec/gchart_spec.rb
