@@ -2,7 +2,7 @@ require File.expand_path(File.dirname(__FILE__) + "/version")
 require File.expand_path(File.dirname(__FILE__) + "/gchart/colors")
 require File.expand_path(File.dirname(__FILE__) + "/gchart/axis")
 
-%w(base bar line pie pie_3d scatter venn xy_line).each do |type|
+%w(base bar line map meter pie pie_3d scatter sparkline venn xy_line).each do |type|
   require File.expand_path(File.dirname(__FILE__) + "/gchart/#{type}")
 end
 
@@ -26,18 +26,27 @@ module GChart
     # Convenience constructor for GChart::Bar.
     def bar(*args, &block); Bar.new(*args, &block) end    
     
+    # Convenience constructor for GChart::Map.
+    def map(*args, &block); Map.new(*args, &block) end    
+
+    # Convenience constructor for GChart::Meter.
+    def meter(*args, &block); Meter.new(*args, &block) end    
+
     # Convenience constructor for GChart::Pie.
     def pie(*args, &block); Pie.new(*args, &block) end    
     
     # Convenience constructor for GChart::Pie3D.
     def pie3d(*args, &block); Pie3D.new(*args, &block) end    
     
-    # Convenience constructor for GChart::Venn.
-    def venn(*args, &block); Venn.new(*args, &block) end    
-    
     # Convenience constructor for GChart::Scatter.
     def scatter(*args, &block); Scatter.new(*args, &block) end
     
+    # Convenience constructor for GChart::Line.
+    def sparkline(*args, &block); Sparkline.new(*args, &block) end
+
+    # Convenience constructor for GChart::Venn.
+    def venn(*args, &block); Venn.new(*args, &block) end    
+        
     # Encode +n+ as a string. +n+ is normalized based on +max+.
     # +encoding+ can currently only be :extended.
     def encode(encoding, n, max)
